--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,7 +30,7 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}","sm4.c",
+                "${file}","sm4.c","test.c",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
@@ -53,7 +53,30 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}","sm4.c","hash1.c",
+                "${file}","sm4.c","hash1.c","test.c",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "调试器生成的任务。"
+        },
+        {
+            "type": "cppbuild",
+            "label": "test hash2",
+            "command": "/usr/bin/gcc",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}","sm4.c","hash2.c","test.c",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
